# cso-toolkit

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  NEWS.md  README.md
.github/workflows/: dashboard.yml  publish-book.yml  r-check.yml
book/: .gitignore  _quarto.yml  index.qmd  introduction.qmd
book/appendices/: a-coverage-matrix.qmd  b-provenance-schema.qmd  c-error-taxonomy.qmd  d-function-reference.qmd  e-glossary.qmd
book/chapters/: 11-why.qmd  12-architecture.qmd  21-roles-and-modes.qmd  22-wiring-the-contract.qmd  23-provenance-and-errors.qmd  31-io.qmd  32-external-api.qmd  33-aggregation.qmd  34-vintage-sync.qmd  35-scaffolding-audit.qmd  41-vendoring.qmd  42-onboarding-example.qmd  43-contract-auditor-ci.qmd  44-versioning-release.qmd
book/front-matter/: acknowledgements.qmd  authors.qmd  foreword.qmd  how-to-cite.qmd  preface.qmd
book/images/: README.md  generate-cover.js
conformance/: README.md  run_r.R
conformance/fixtures/: indicators.csv
docs/: dw-production-alignment-2026-05-25.md  dw_api_python_reference.md  dw_api_reference.md  dw_io_python_reference.md  dw_io_reference.md  git_workflow.md  index.html  mode_contract_integration.md  roles_and_workflow.md  toolkit_strategy.md
docs/dashboard/: README.md  collect.R  index.html  make_charts.R  render.R
docs/handbook/: index.html  introduction.html  search.json
python/: README.md  pyproject.toml
python/src/: README.md  __init__.py  _state.py  aggregate_data.py  create_sector_script.py  cso_toolkit_sync.py  dw_api.py  dw_io.py  dw_nestweight.py  dw_pop.py  generate_markdown_report.py  profile_helpers.py  test_scripts.py
python/tests/: test_dw_pop.py
python/tests/manual/: error_envelope_test.py  smoke_test.py
r/: .Rbuildignore  .gitattributes  DESCRIPTION  LICENSE  NAMESPACE  README.md  _pkgdown.yml
r/R/: dw_io.R  (+14 more)
stata/: README.md
templates/: .toolkit_manifest.yml  dbm_submission_template.md
(+146 files in other folders)
